# BMSTU-IU7-7SEM

./: .gitignore  README.md
ComputerNetwork/1/: 1.1.pkt  1.2.pkt  1.3.pkt
ComputerNetwork/2/: Makefile  client.c  server.c  sock.h
InfoSecurity/1_machineid/: CMakeLists.txt  README.md  entrypoint.h
InfoSecurity/2_enigma/: init.py  machine.py  main.py  plugboard.py  reflector.py  rotor.py
InfoSecurity/3_des/: config.py  des.py  main.py  utils.py
InfoSecurity/5_rsa/: algo.py  data.txt  main.py  rsa.py
InfoSecurity/6_signature/: main.py
InfoSecurity/7_huffman/: huffman.py  main.py
Modeling/1/: main.py
Modeling/2/: graph.py  main.py  markov.py  requirements.txt  table.py
Modeling/3/: digits.txt  main.py  qt_table.py  rand.py
Modeling/4/: main.py  main.ui
Modeling/4/system/: generator.py  model.py  queue.py  service.py
Modeling/5/: main.py
Modeling/5/system/: generator.py  model.py  service.py
Modeling/6/: main.py
Modeling/6/system/: generator.py  model.py  queue.py  service.py
Modeling/7/: l7.18.1.gpr  main.gps  main.txt
Modeling/report/: report.tex
Modeling/report/1/: main.tex
Modeling/report/2/: main.tex
Modeling/report/3/: main.tex
Modeling/report/4/: main.tex
Modeling/report/5/: main.tex
Modeling/report/6/: main.tex
Modeling/report/7/: main.tex  result.txt
Modeling/report/common/: preamble.tex  title.tex
